# omnisolver

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  README.md  mkdocs.yml  pylintrc  pyproject.toml  setup.cfg  setup.py  versions.json
.github/workflows/: build_and_publish.yml  deployment.yml  quality_checks.yml
0.0.2/: index.html
0.0.2/overrides/: main.html
0.0.2/reference/: index.html
0.0.2/stylesheets/: extra.css
0.0.2/userguide/: index.html
0.0.3/: 404.html  index.html
0.0.3/overrides/: main.html
0.0.3/search/: search_index.json
0.0.5/: index.html
0.0.5/search/: search_index.json
0.0.6/: 404.html
docs/: conf.py  creating_plugin.md  creatorguide.md  index.md  plugin.md  reference.md  userguide.md
docs/_templates/autoapi/: index.rst
docs/reference/: omnisolver_common_cmd.md  omnisolver_common_plugin.md  omnisolver_common_serialization.md  omnisolver_random_sampler.md
docs/stylesheets/: extra.css
gh-pages/: 404.html  index.html
gh-pages/assets/: logo.png~
gh-pages/search/: search_index.json
latest/: 404.html  index.html
latest/overrides/: main.html
latest/userguide/: index.html
omnisolver/: adapters.py  cmd.py  plugin.py  serialization.py
omnisolver/common/: cmd.py  plugin.py
omnisolver/plugin/: __init__.py  hookspecs.py
omnisolver/random/: __init__.py  random.yml  sampler.py
omnisolver/samplers/: random.py  van.py
omnisolver/specifications/: van.yml
omnisolver/tests/: test_plugin.py  test_serialization.py
src/omnisolver/common/: cmd.py  plugin.py  serialization.py
src/omnisolver/random/: __init__.py  sampler.py
tests/: test_cmd.py  test_plugin.py  test_random_sampler.py  test_serialization.py
