[tool.poetry]
name = "omnisolver"
version = "0.0.0"
description = "Extensible framework for creating and running Binary Quadratic Model solvers and samplers."
authors = ["Konrad Jałowiecki <dexter2206@gmail.com>", "Łukasz Pawela <lukasz.pawela@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics"
]

[tool.poetry.dependencies]
python = "^3.9"
dimod = "^0.10"
numpy = "^1.21"
pandas = "^1.1"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
black = "^23.11.0"
isort = "^5.12.0"
pandas-stubs = "^2.1.1.230928"
flake8 = "^6.1.0"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
omnisolver = "omnisolver.common.cmd:main"


[tool.poetry.plugins."omnisolver"]
random = "omnisolver.random"


[tool.poetry-dynamic-versioning]
enable = true
pattern = "default-unprefixed"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
