[metadata]
name = omnisolver
description = Extensible framework for creating and running Binary Quadratic Model solvers and samplers.
long_description = file: README.md
long_description_content_type = text/markdown
author = Konrad Jałowiecki, Łukasz Pawela
author_email = dexter2206@gmail.com
license = Apache-2.0
url = https://github.com/euro-hpc-pl/omnisolver
classifiers =
    Intended Audience :: Other Audience
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find_namespace:
python_requires = >= 3.7
install_requires =
    dimod >= 0.9.10
    numpy >= 1.19.4
    pluggy >= 0.13.1
    PyYAML >= 5.3.1
    pandas >= 1.1.4

[options.extras_require]
test = coverage[toml]>=5.5; pytest>=6.1.2; pytest-mock>=3.3.1; pytest-cov>=2.12.1

[options.entry_points]
console_scripts =
    omnisolver = omnisolver.cmd:main
omnisolver =
    random = omnisolver.random

[options.packages.find]
exclude = tests
